# polars_grouper

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  run.py
.github/workflows/: publish_to_pypi.yml
performance_tests/: native_python_implementation.py  performance_test.py  sample_data.py
performance_tests/data/: sample_data.py
performance_tests/super_merger/: rust.py  simple.py
polars_graph/: __init__.py
polars_grouper/: __init__.py
src/: association_rule_graph_mining.rs  expressions.rs  graph_betweenness_centrality.rs  graph_solver.rs  graph_utils.rs  lib.rs  page_rank.rs  shortest_path.rs
tests/: test_graph_solver.py  test_pig_latinnify.py  tests.py
